<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home" android:title="@string/nav_home" android:icon="@drawable/ic_home" />
    <item android:id="@+id/nav_groups" android:title="@string/nav_groups" android:icon="@drawable/ic_groups_filled" />
    <item android:id="@+id/nav_scanner" android:title="@string/nav_scanner" android:icon="@drawable/ic_scanner_white" />
    <item android:id="@+id/nav_search" android:title="@string/nav_search" android:icon="@drawable/ic_search_filled" />
    <item android:id="@+id/nav_theme" android:title="@string/nav_theme" android:icon="@drawable/ic_sun_filled" />
    <item android:id="@+id/nav_settings" android:title="@string/nav_settings" android:icon="@drawable/ic_settings_filled" />
</menu>
